    - Added setting to allow in space in startup settings.

---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2022.08.11
  Info:
    - Added stdlib (Factorio Standard Library) as requirement for the bugfixes.
  Bugfix:
    - Fixed startup errors for recipe results when there is a probability and amount_min/max.
    - Fixed copying custom icons for recipes. (If they're used by another mods (such as Deadbolt's stacked recipes), it won't generate a startup error).
    - Fixed entity description.

---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2022.04.13
  Bugfix:
    - Work with the non-array-like ingredient prototypes.
  Miscellaneous:
    - Fix changelog format.
    - Restore missing license file.

---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2022.04.10
  Bugfix:
    - Automatically fill recipe module limitations.
    - Copy energy cost properly.

---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2022.04.10
  Miscellaneous:
    - Version bump due to upload mistake. Whoops!

---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2022.04.10
  Info:
    - First forked release by SingularityCat
  Feature:
    - Made the mod generate recipes based on existing ones.

---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2022.03.06
  Miscellaneous:
    - Fixed mod licensing, my bad (shoutout to raiguard, many thanks!)

---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2022.02.28
  Bugfix:
    - Added more item recipes and optional mod dependencies for Krastorio, etc.
